feat(hopper-xtreme): mod working (needs QA)